# Meta

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
cmake/: DlBuildVc.cmake
meta_gen_test/: CMakeLists.txt
meta_gen_test/src/: Actors.h  DefaultCallOrder.h  Includes.h  Objects.h  Orders.h  Shared.h  Source.cpp  StableHeaders.h  Variables.h
meta_lib/: CMakeLists.txt
meta_lib/include/: 1_Orders.h  2_Parameters.h  3_Functions.h  4_Arguments.h  5_Calls.h  meta.h
meta_lib/include/misc/: func_format.h  meta_utils.h  print.h
meta_lib/include/optimizer/: BranchAndBound1.h  CostFunctions.h  SimulatedAnnealing.h  SimulatedAnnealing_Implementation1.h
meta_test/: CMakeLists.txt  main.cpp  precompute_main.cpp  precompute_settings.cpp
meta_test/include/: MetaArguments1.h  MetaArguments2.h
meta_test/include/simulation/: Actor.h  Actor1.h  Constants.h  DefaultCallOrder.h  Object.h  Object1.h  Object2.h  Position.h  SharedOrders.h  TestIncludes.h  TestVariables.h  World.h
meta_test/src/: MetaTU.cpp
